--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(90deg, rgba(238, 174, 202, 1) 0%, rgba(69, 136, 204, 1) 100%);
     background-image: url('./images/bg3.webp');
-    background-repeat:repeat-y;
-    background-size: cover;
+    background-size: auto;
 }
 
 code {
